# rpm-ostree-gui

./: Makefile  README.md  io.github.epiccakeking.RpmOstreeGui.desktop  setup.cfg
rpm-ostree-gui/: DeploymentInfoPage.ui  MainWindow.ui  PackageListItem.ui  SearchWindow.ui  __main__.py
