[metadata]
name = rpm-ostree-gui
version = 0.0.2
author = epiccakeking
author_email = epiccakeking@gmail.com
description = GUI application for managing RPMs via rpm-ostree.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epiccakeking/rpm-ostree-gui
project_urls =
    Bug Tracker = https://github.com/epiccakeking/rpm-ostree-gui/issues
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux

[options]
packages = rpm-ostree-gui
python_requires = >=3.6
install_requires = python-Levenshtein

[options.package_data]
* = *

[options.data_files]
share/applications = io.github.epiccakeking.RpmOstreeGui.desktop
